updated template and css for edit review. fixed layout issues

--- a/products/static/products/css/products.css
+++ b/products/static/products/css/products.css
@@ -29,7 +29,3 @@
 .recommended_drop_down{
     font-size: 12px;
 }
-
-.edit_review_form{
-    border: 1px solid lightgray;
-}
